crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__empty_query.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
