crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__error_extract_kv_not_implemented.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl_err(\"* | extract kv\")"
---
unsupported operation: extract kv is not yet implemented
