crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__error_extract_no_named_groups.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl_err(r#\"* | extract \"([0-9]+)\" from message\"#)"
---
unsupported operation: extract regex must contain at least one named capture group (?P<name>...)
