crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__error_unknown_function.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl_err(\"* | stats bogus()\")"
---
unknown function: bogus
