crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__expr_compound_and.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | where status > 400 and status < 500\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE (("status" > ?) AND ("status" < ?))
---
params:
  0: 400
  1: 500
